**contact details update, footer update, select drop down overflow fix

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -3787,7 +3787,7 @@ font-size:13px !important;
     overflow-y: auto;
 }
 .select2-container { 
-    width: 100% !important;
+    /* width: 100% !important; */
     padding-left: 25px;
 }
 
